--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ sysinfo.txt
 crashlytics-build.properties
 .DS_Store
 First2DGame/.DS_Store
+First2DGame/Logs/AssetImportWorker1.log
+First2DGame/Logs/AssetImportWorker1.log
+First2DGame/Logs/AssetImportWorker1.log
