--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ First2DGame/.DS_Store
 First2DGame/Logs/AssetImportWorker1.log
 First2DGame/Logs/AssetImportWorker1.log
 First2DGame/Logs/AssetImportWorker1.log
+First2DGame/mono_crash.76e38c0be.0.json
